--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.KampusKita"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.TambahActivity"
+            android:name=".Activity.Activity.TambahActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.UbahActivity"
+            android:name=".Activity.Activity.UbahActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
